nullaway_error_0391a36b-a8ae-4b0d-8653-08fae4e000aa.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/MapObject.java:215: error: [NullAway] method returns @Nullable, but superclass method de.gurkenlabs.litiengine.environment.tilemap.IMapObject.getPolygon() returns @NonNull
  public IPolyShape getPolygon() {
                    ^
    (see http://t.uber.com/nullaway )
